# MLOpsFase1

./: .gitignore  CCDS_AUDIT.md  CCDS_SUMMARY.txt  ENV_SETUP.md  Fase1.ipynb  LICENSE  Makefile  README.md  Test Daniel  check_env.py  environment.yml  obesity_estimation_cleaned.csv  obesity_estimation_cleaned.csv.dvc  pyproject.toml  requirements.txt  setup.py  setup_project.ps1
.dvc/: config
artefactos/: mejores_modelos.csv  pipelines_optimizados.joblib
config/: config.yaml  credentials.example.yaml
data/: .gitignore  obesity_estimation_cleaned.csv  obesity_estimation_cleaned.csv.dvc  obesity_estimation_model.csv  obesity_estimation_model.csv.dvc
data/raw/: obesity_estimation_cleaned.csv.dvc
docs/: COOKIECUTTER_IMPLEMENTATION.md  Guion de Video.docx  Presentacion-Ejecutiva-Fase-1.pptx  REFACTORING.md  mkdocs.yml
docs/docs/: index.md
notebooks/: 01_eda.ipynb  EDA.ipynb  Fase1_Team53.ipynb
notebooks/1. Data manipulation and preparation/: 1.1_import_data_initial_analysis.ipynb  1.2_data_cleaning.ipynb  1.3_exploratory_analysis_eda.ipynb  Contenido.md
notebooks/1. Data manipulation and preparation/.dvc/: config
notebooks/2. Preprocessing and Feature Engineering/: 2.1_feature_engineering.ipynb  2.2_preprocessing_pipelines.ipynb
notebooks/3. Model Building, Tuning, and Evaluation/: 3.1_model_building_and_tuning.ipynb  3.2_model_evaluation.ipynb
notebooks/data/: obesity_estimation_cleaned.csv
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/7c98ff2b5aad4d4f80915e6b8d7bcd60/: meta.yaml
notebooks/mlruns/0/d0e3196fd4074328883eb10ab64a3226/: meta.yaml
notebooks/mlruns/630002249221256555/: meta.yaml
obesitymine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
references/: .gitkeep  README.md
src/: __init__.py  carga_dvc.py  cargar_analisis.py  eda.py  evaluar_modelos.py  feature_engeenering.py  limpieza.py  modelos.py  pipelines.py  train.py
src/base/: __init__.py  base_data_loader.py  base_model.py  base_pipeline.py  base_preprocessor.py
src/data/: __init__.py  data_loader.py
src/features/: feature_engineering.py
src/mlops/: __init__.py
src/mlops/data/: __init__.py
src/preprocessing/: cleaning.py
src/utils/: mlflow_utils.py
(+13 files in other folders)
